--- a/standby.html
+++ b/standby.html
@@ -25,7 +25,7 @@
       margin-bottom: 20px;
     }
 
-    p {
+    a {
       font-size: 1.5em;
       margin-bottom: 40px;
     }
@@ -50,7 +50,7 @@
   <div id="standby-screen">
     <img id="logo" src="logo.png" alt="Cinema Logo">
     <h1>YTDisplay</h1>
-    <p>Find on github: diginoor/YTproject</p>
+    <a href="https://github.com/diginooreu/YTProject">Our Github</a>
   </div>
 
   <div id="copyright">
