--- a/standby.html
+++ b/standby.html
@@ -50,7 +50,7 @@
   <div id="standby-screen">
     <img id="logo" src="logo.png" alt="Cinema Logo">
     <h1>YTDisplay</h1>
-    <a href="https://github.com/diginooreu/YTProject">Our Github</a>
+    <a>Waiting for commands...</a>
   </div>
 
   <div id="copyright">
