--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
     <input type="text" id="urlInput">
     <button id="send" onclick="sendMessage()">Send</button>
     <button id="blankScreen" onclick="sendBlankScreen()">Blank Screen</button>
-    <button id="opendisp" onclick="window.open('projector.html', '_blank', 'width=600,height=400')">Open Display</button><br><br>
+    <button id="opendisp" onclick="window.open('projector.html', '_blank', 'width=600,height=400')">Open Display</button>
+    <button id="send" onclick="window.location.href = 'https://github.com/diginooreu/YTDisplay'">Our Github</button><br><br>
 
 
     <label>Show Controls on Display:</label>
